# gaucho-tracker

./: .gitignore  Cargo.toml  README.md
crates/app_state/: Cargo.toml
crates/app_state/src/: lib.rs  tests.rs
crates/audio/: Cargo.toml
crates/audio/src/: connector.rs  lib.rs  main.rs  tests.rs
crates/core/: Cargo.toml
crates/core/src/: events.rs  lib.rs  tests.rs
crates/project/: Cargo.toml
crates/project/src/: lib.rs  loader.rs  model.rs
crates/project/tests/: load_project.rs
crates/sampler/: Cargo.toml
crates/sampler/src/: lib.rs
crates/sequencer/: Cargo.toml
crates/sequencer/src/: integration.rs  lib.rs  tests.rs
crates/tui/: Cargo.toml
crates/tui/src/: main.rs
docs/: Gaucho Tracker Project Format.md
docs/examples/my-song/: notes.md  tracks.json
gaucho-projects/my-song/: gaucho.toml  pattern-01.toml  project.toml  tracks.json
gaucho-projects/my-song/patterns/: 000.json  000.meta.json
hardware/: Gaucho Tracker – SBC Hardware Stack.md
hardware/gaucho-tracker-v1/: BOM.md
tests/: integration.rs
tools/image/: build.sh  config
tools/image/stage-gaucho/01-gaucho-tracker/: 00-run.sh
