
[package]
name = "audio"
version = "0.1.0"
edition = "2021"

[dependencies]
rodio = "0.17"
hound = "3.5"    # For WAV file handling
log = "0.4"
project = { path = "../project" }
sequencer = { path = "../sequencer" }
thiserror = "1.0"
env_logger = "0.10"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.8"
