[package]
name = "tui"
version = "0.1.0"
edition = "2021"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.29.0"
project = { path = "../project" }
sequencer = { path = "../sequencer" }
app_state = { path = "../app_state" }
core = { path = "../core" }
log = "*"
env_logger = "*"

[[bin]]
name = "gaucho-tracker"
path = "src/main.rs"

